--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-pandas==3.0.0
-numpy==2.3.5
-matplotlib==3.10.8
-seaborn==0.13.2
-scikit-learn==1.8.0
-umap-learn==0.5.11
+Core Requirements:
+Python 3.9 or above
+pip (Pip Installs Packages) - For installation of runtime Python Libraries
+
+Dataset: Kaggle's Mall Customer Segmentation Data - Provided under /data folder (https://www.kaggle.com/datasets/vjchoudhary7/customer-segmentation-tutorial-in-python)
+
+
+Core Python/pip libraries:
+   - numpy
+   - pandas
+   - scikit-learn
+   - matplotlib
+Environment:
+   - Jupyter (or notebook / jupyterlab) for runtime environment for running .ipynb files
